Update PaperBootstrap.java